--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
         
-      - name: Run mix format check
-        run: mix format --check-formatted
+      - name: Format code (fix formatting issues)
+        run: mix format
         
       - name: Run mix tests
         run: mix test
